<resources>
    <string name="app_name">TIC TAC TOE</string>
    <string name="player_info">Player 1</string>
    <string name="game_status">Your turn</string>
    <string name="replay_button">Replay</string>
    <string name="title_activity_send_otpactivity">SendOTPActivity</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_a_one_time_password_on_this_number">We will send you a one time password on this number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="_966">+966-</string>
    <string name="_123456789">123456789</string>
    <string name="get_otp">GET OTP</string>
    <string name="enter_to_the_otp_sent_to">Enter to the OTP sent to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
    <string name="sign_in">Sign In</string>
    <string name="play_offline">Play Offline</string>
    <string name="welcome_ntic_tac_toe">Welcome\nTIC TAC TOE</string>
    <string name="play_online">Play Online</string>
    <string name="enter_a_game_id">Enter a game ID</string>
    <string name="join_online_game">Join Online Game</string>
    <string name="create_online_game">Create Online Game</string>
    <string name="game_not_started">Game not started</string>
    <string name="start_game">Start game</string>
    <string name="you_are">You are: -</string>
    <string name="turn">Turn :</string>
    <string name="x_won">X WON!</string>
    <string name="score">Score :</string>
    <string name="x_0">X - 0</string>
    <string name="y_0">Y - 0</string>
    <string name="join_a_game">Join a Game</string>
    <string name="enter_code_below_to_join_a_game">Enter Code Below To Join A Game</string>
    <string name="_0000">0000</string>
    <string name="join">Join</string>
    <string name="choose_an_option">Choose An Option</string>
    <string name="create_a_game">Create a Game</string>
    <string name="restart_game">restart game</string>
    <string name="player_2_o">Player 2 (O)</string>
    <string name="player_1_x">Player 1 (X)</string>
    <string name="_0">0</string>
    <string name="scoreـoffline">Score</string>
    <string name="restart_game_online">Restart Game</string>
    <string name="share_code">Share Code</string>
    <string name="ask_your_friend_to_join_with_this_code">Ask Your Friend To Join With This Code</string>


</resources>